# eposcorer

./: setup.cfg
eposcorer/: epo_dimensions.py  epo_scoring.py  language_model_setup.py  prepare_data.py  semantic_dimensions.py
