[metadata]
name = eposcorer
version = 0.2.0
author = Matthias Reccius
author_email = matthias.reccius@ruhr-uni-bochum.de
description =
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
keywords = bert finance spin
license = BSD-3-Clause

[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages=find:
python_requires = >=3.8
install_requires = 
    typing
    numpy
    torch
    collections
    pandas
    re
    spacy
    tqdm
    csv
    transformers
    optionsgc
    h5py

[options.packages.find]
where=src